--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="banner">
         <div class="half-width slicecs">
 <div class="slice">
-    <h1 class="banner-h1"> Stay Focused on 
+    <h1 class="banner-h1 h1"> Stay Focused on 
         <br>
         <span class="banner-content">Mission 2022</span>
     </h1>
@@ -28,7 +28,7 @@
         </div>
 
         <div class="half-width">
-            <img src="image/images/person//person-1.png" alt="">
+            <img class="b-img" src="image/images/shapes/New Project (4).png" alt="">
         </div>
        
     </section>
@@ -128,7 +128,7 @@
 
 <footer>
 <div class="footer">
-    <h1 class="footer">Mission 2022
+    <h1 class="footer">Mission <span>2022</span> 
     </h1>
     <br>
     <small class="footer2">Hard work, Perseverance, and Determination for 2022
