--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div class="half-width">
     <img src="image/images/pictures/coding.png" alt="">
 </div>
-<div class="half-width">
+<div class="half-width picturediv">
     <h1 class="banner-h1" >Develop 
 <br>
         Without Limits</h1>
