--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&family=Poppins:ital,wght@0,200;1,200&display=swap" rel="stylesheet">
+<link rel="icon" type="image/x-icon" href="file:///D:/assignment-1/image/images/shapes/New%20Project%20(4).png">
+
     <link rel="stylesheet" href="style.css">
     <title>Mission 2022</title>
 </head>
